Updated bot.js Updated index.js Added models.js Updated modules.js Updated storage.js Added test.js (command) Added ready.js (event) Removed sharding
Co-authored-by: coreycdoughill@gmail.com <coreycdoughill@gmail.com>
Co-authored-by: Ty <wtid2003@Gmail.com>

--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://gitlab.com/Emissions/the-service-team-bot/issues"
   },
-  "homepage": "https://gitlab.com/Emissions/the-service-team-bot#readme"
+  "homepage": "https://gitlab.com/Emissions/the-service-team-bot#readme",
+  "dependencies": {
+    "discord.js": "github:discordjs/discord.js",
+    "djs-commands": "^1.2.2",
+    "fs": "0.0.1-security",
+    "mongoose": "^5.8.4",
+    "stable-discord.js": "npm:discord.js@^11.5.1"
+  }
 }
